--- a/ERS/appsettings.json
+++ b/ERS/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ERS-C97966D0-0B20-44BE-8AD1-5CC7B3150001;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-I0SL2KE\\SQLEXPRESS;Database=ERS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
