--- a/ERS/appsettings.json
+++ b/ERS/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-I0SL2KE\\SQLEXPRESS;Database=ERS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-070N69A\\SQLEXPRESS;Database=ERS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -9,3 +9,8 @@
     }
   }
 }
+
+//DESKTOP-070N69A\SQLEXPRESS
+
+
+//DESKTOP-I0SL2KE\\SQLEXPRESS
